--- a/my-app/package.json
+++ b/my-app/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "tailwind-scrollbar": "^3.1.0"
   }
 }
