--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,12 +15,15 @@
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-dropdown": "^1.11.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
