--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +13,11 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.5",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -24,7 +27,9 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
+    "recharts": "^2.13.0",
     "typescript": "^4.9.5",
+    "ui": "github:shadcn/ui",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
