--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
+    "react-mentions": "^4.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
