--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,9 +14,11 @@
     "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.5",
+    "date-fns": "^4.1.0",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
     "react-dnd": "^16.0.1",
