--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,9 +14,12 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.5",
     "date-fns": "^4.1.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
@@ -25,6 +30,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
+    "react-i18next": "^15.0.3",
     "react-mentions": "^4.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
