--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.6.2",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-chartjs-2": "^5.2.0",
