--- a/my-app/package.json
+++ b/my-app/package.json
@@ -40,6 +40,7 @@
     "recharts": "^2.13.0",
     "typescript": "^4.9.5",
     "ui": "github:shadcn/ui",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
