--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,7 +20,7 @@
     "date-fns": "^4.1.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.16.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
