--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "json-server": "^0.16.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-chartjs-2": "^5.2.0",
