--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,8 +7,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
@@ -69,7 +67,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/jsonwebtoken": "^9.0.7",
+    "jest": "^27.5.1",
     "tailwind-scrollbar": "^3.1.0"
   }
 }
